[gd_scene load_steps=12 format=3 uid="uid://c3wsgeatay1hg"]

[ext_resource type="Script" uid="uid://6kp8gixwjrk2" path="res://Steam_Multiplayer/waiiting_room.gd" id="1_3fvjc"]
[ext_resource type="Script" uid="uid://c1ofvucsi1s8r" path="res://Steam_Multiplayer/multiplayer_spawner.gd" id="1_7d8o2"]
[ext_resource type="PackedScene" uid="uid://ba0b4v76xhfls" path="res://Player/Scenes/player.tscn" id="3_3fvjc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0seqp"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_3fvjc"]
sky_material = SubResource("ProceduralSkyMaterial_0seqp")

[sub_resource type="Environment" id="Environment_2qlfx"]
background_mode = 2
sky = SubResource("Sky_3fvjc")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_0seqp"]
size = Vector3(50, 0.5, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3fvjc"]
albedo_color = Color(0.38170326, 0.38170323, 0.38170323, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_3fvjc"]
data = PackedVector3Array(-25, 0.25, 25, 25, 0.25, 25, -25, -0.25, 25, 25, 0.25, 25, 25, -0.25, 25, -25, -0.25, 25, 25, 0.25, -25, -25, 0.25, -25, 25, -0.25, -25, -25, 0.25, -25, -25, -0.25, -25, 25, -0.25, -25, 25, 0.25, 25, 25, 0.25, -25, 25, -0.25, 25, 25, 0.25, -25, 25, -0.25, -25, 25, -0.25, 25, -25, 0.25, -25, -25, 0.25, 25, -25, -0.25, -25, -25, 0.25, 25, -25, -0.25, 25, -25, -0.25, -25, 25, 0.25, 25, -25, 0.25, 25, 25, 0.25, -25, -25, 0.25, 25, -25, 0.25, -25, 25, 0.25, -25, -25, -0.25, 25, 25, -0.25, 25, -25, -0.25, -25, 25, -0.25, 25, 25, -0.25, -25, -25, -0.25, -25)

[sub_resource type="BoxMesh" id="BoxMesh_2qlfx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mt0ga"]
albedo_color = Color(0.43634963, 0.09542277, 0.023212835, 1)

[node name="level" type="Node"]
script = ExtResource("1_3fvjc")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2qlfx")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="floor" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_0seqp")
surface_material_override/0 = SubResource("StandardMaterial3D_3fvjc")

[node name="StaticBody3D" type="StaticBody3D" parent="floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_3fvjc")

[node name="boxes" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.2932835, 0.75, -4.07098)
mesh = SubResource("BoxMesh_2qlfx")
surface_material_override/0 = SubResource("StandardMaterial3D_mt0ga")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.2634687, 0.75, 8.557474)
mesh = SubResource("BoxMesh_2qlfx")
surface_material_override/0 = SubResource("StandardMaterial3D_mt0ga")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.51183, 0.75, 7.326103)
mesh = SubResource("BoxMesh_2qlfx")
surface_material_override/0 = SubResource("StandardMaterial3D_mt0ga")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.257103, 0.75, -11.785713)
mesh = SubResource("BoxMesh_2qlfx")
surface_material_override/0 = SubResource("StandardMaterial3D_mt0ga")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.571556, 0.74999905, -15.097141)
mesh = SubResource("BoxMesh_2qlfx")
surface_material_override/0 = SubResource("StandardMaterial3D_mt0ga")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.225113, 0.74999905, 19.819706)
mesh = SubResource("BoxMesh_2qlfx")
surface_material_override/0 = SubResource("StandardMaterial3D_mt0ga")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.785496, 0.75, 17.683731)
mesh = SubResource("BoxMesh_2qlfx")
surface_material_override/0 = SubResource("StandardMaterial3D_mt0ga")

[node name="Label" type="Label" parent="."]
offset_left = 155.0
offset_top = 68.0
offset_right = 195.0
offset_bottom = 91.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="." node_paths=PackedStringArray("_spawn_path")]
spawn_path = NodePath("../spawn_path")
script = ExtResource("1_7d8o2")
player_Scene = ExtResource("3_3fvjc")
_spawn_path = NodePath("../spawn_path")

[node name="spawn_path" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.335869, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="start_game" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -115.0
offset_right = -30.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
text = "Start Game
[press Enter["

[node name="heading" type="Label" parent="Control"]
layout_mode = 0
offset_right = 126.0
offset_bottom = 23.0
text = " Players in lobby"

[node name="players_names" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_top = 25.0
offset_right = 128.0
offset_bottom = 65.0
